--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Slate : A responsive theme for GitHub Pages</title>
+    <title>VR Head-Tracking</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="repository_url}}">View on GitHub</a>
 
-          <h1 id="project_title">Slate</h1>
-          <h2 id="project_tagline">A responsive theme for GitHub Pages</h2>
+          <h1 id="project_title">Head-Tracking for Virtual Reality</h1>
+          <h2 id="project_tagline">Michael Anderson &amp; Jin Woo Park</h2>
 
           <section id="downloads">
             <a class="zip_download_link" href="#">Download this project as a .zip file</a>
