Switched gif to traditional img tags

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         <h1>Background</h1>
         <p>
-        ![](https://github.com/mbanderson/headtracker/tree/gh-pages/images/Truth.gif)
+        <img src="https://github.com/mbanderson/headtracker/tree/gh-pages/images/Truth.gif">
         
         </p>
 
