Changed gifs to relative path

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>Background</h1>
-        <p>
-        <img src="![](https://github.com/mbanderson/headtracker/tree/gh-pages/images/Truth.gif)">
         
-        </p>
+        <figure><img src="/images/Truth.gif"></figure>
+        
+        <p></p>
 
         <h1>System Kinematics</h1>
 
