Now with correct path

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         <h1>Background</h1>
         
-        <figure><img src="/images/Truth.gif"></figure>
+        <figure><img src="/headtracker/images/Truth.gif"></figure>
         
         <p></p>
 
